@@ -1673,15 +1673,32 @@ function CygbuildCmdInstallCheckBinFiles()
 
             if [ "$str" ]; then
 
-                #  PATH -rwxr-xr-x  1 root None 1239 ...
-
                 set -- $str
-                local size=$5
+		local count=$#
 
-                if [[ $size -gt $maxsize ]]; then
-                    CygbuildEcho "-- [NOTE] Big file, need " \
-                         "dynamic linking? $size $file"
-                fi
+		# ... 650752 Sep 25 08:09 /home/foo/file.txt
+		local col=$(( count - 4	))	# From the right
+
+		# ... 650752 2002-02-04 08:09 /home/foo/file.txt
+		# But sometimes the listing is different
+
+		local datecol=$(( count - 3 ))
+                local date=${@:datecol:1}
+
+		if [[ "$date" == *-* ]]; then
+		    col=$(( count - 3 ))
+		fi
+
+                local size=${@:col:1}
+
+		if [[ "$size" == [0-9]* ]]; then
+		    if [[ $size -gt $maxsize ]]; then
+			CygbuildEcho "-- [NOTE] Big file, need " \
+			     "dynamic linking? $size $file"
+		    fi
+		else
+		    CygbuildWarn "-- [WARNING] Internal error, can't parse: '$str'"
+		fi
             fi
         fi
 
